--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -10,3 +10,60 @@ main {
   min-height: 100dvh;
   justify-content: space-between;
 }
+
+.home {
+  width: max-content;
+  font-size: 4rem;
+  margin: 50px auto;
+}
+
+.temp {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
+
+.temp h2 {
+  cursor: pointer;
+  font-size: 10rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  margin: 100px;
+  gap: 20px;
+}
+
+input {
+  font-size: 1.3rem;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+button {
+  height: 60px;
+  font-size: 1.3rem;
+  cursor: pointer;
+  background: rgb(171, 245, 171);
+}
+
+button:hover {
+  background-color: rgb(171, 171, 220);
+}
+
+.pass input {
+  width: 100%;
+}
+
+.pass {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  right: 10px;
+  top: 8px;
+  cursor: pointer;
+}
