--- a/client/src/styles/productCard.css
+++ b/client/src/styles/productCard.css
@@ -33,10 +33,15 @@
   height: 150px;
 }
 
+.link {
+  text-decoration: none;
+}
+
 .card-heading {
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
+  color: black;
 }
 
 .description {
